.featured-articles-container grid changed to flex and gap fix

--- a/assets/css/effects.scss
+++ b/assets/css/effects.scss
@@ -3,7 +3,7 @@
 	// display: inline;
 	// font-size: 2.4rem;
 	// text-align: center;
-	margin: auto;
+	// margin: auto;
 	// font-weight: 600;
 	// background-image: var(--red-to-pink-to-purple-horizontal-gradient);
 	background-image: var(--hover-color);
